<resources>
    <string name="app_name">Money Tracker</string>
    <string name="general_settings">Thiết lập chung</string>
    <string name="updated">Đã cập nhật</string>
    <string name="update_after_close_app">Sẽ cập nhật thay đổi sau khi khởi động lại</string>
    <string name="language">Ngôn ngữ</string>
    <string name="menu_settings">Thiết lập</string>
    <string name="menu_import">Nhập…</string>
    <string name="invalid_file_name">Tên tệp tin không hợp lệ</string>
    <string name="menu_export">Xuất…</string>
    <string name="input_file_name">Nhập tên tệp tin</string>
    <string name="month_overbudget">Đã vượt quá ngân sách tháng!!!</string>
    <string name="schedule_detail_overbudget">Đã vượt quá ngân sách cho khoản {0}!!!</string>
    <string name="week_overbudget">Đã vượt quá ngân sách tuần!!!</string>
    <string name="choose_excel_type">Dữ liệu dạng excel</string>
    <string name="choose_import_data_type">Dữ liệu dạng lưu trữ (.pif)</string>
    <string name="note"><u>Chú thích</u></string>
    <string name="saved">Đã lưu</string>
    <string name="exported_successfully">Đã lưu thành công tệp: sdcard/PFMData/{0}</string>
    <string name="select_all">Chọn tất cả</string>
    <string name="percent">%</string>
    <string name="error_save">Lỗi khi lưu trữ</string>
    <string name="error_load">Lỗi khi tải dữ liệu</string>
    <string name="title_activity_home">Money Tracker</string>
    <string name="time_token">:</string>
    <string name="limited_category_message">Chương trình chỉ hỗ trợ 25 mục tự tạo</string>
    <string name="dummy_data">Dummy data</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="file_not_exist">Tệp tin không tồn tại</string>
    <string name="image_icon_description">Image of tab</string>
    <string name="delete_confirm">Xóa?</string>
    <string name="success">Thành công</string>
    <string name="a_character">â|ấ|ẫ|ẩ|ậ|Ấ|Ẩ|Ẫ|Ậ|Â|ă|ắ|ẵ|ặ|ẳ|Ă|Ắ|Ẵ|Ặ|Ẳ</string>
    <string name="o_character">ô|ố|ỗ|ổ|ộ|Ố|Ổ|Ỗ|Ộ|Ô|ơ|ớ|ỡ|ợ|ở|Ở|Ỡ|Ợ|Ớ|Ơ</string>
    <string name="e_character">ê|ế|ễ|ể|ệ|Ê|Ể|Ễ|Ệ|Ê</string>
    <string name="u_character">ư|ử|ứ|ự|ữ|Ữ|Ử|Ứ|Ự|Ư</string>
    <string name="d_character">Đ|đ</string>
    <string name="others">Khác…</string>
    <string name="hours">tiếng</string>
    <string name="minutes">phút</string>
    <string name="days">ngày</string>
    <string name="weeks">tuần</string>
    <string name="existed_category_message">Mục này đã tồn tại</string>
    <string name="export_schedule_table_info">Tổng ngân sách, Khoảng thời gian, Từ ngày, Đến ngày, Tiền từng mục, Tên mục</string>
    <string name="export_entry_table_info">Ngày, Loại thu chi, Tên khoản thu chi, Tiền, Tên mục</string>
    <string name="export_borrow_lend_table_info">Tên, Số điện thoại, Địa chỉ, Loại vay - cho vay, Số tiền, Kiểu lãi suất, Lãi suất (%), Ngày bắt đầu, Ngày đáo hạn</string>
    <string name="input_dialog_title">Nhập giá trị</string>
    <string name="choose_account_dialog_title">Chọn tài khoản</string>
    <string name="ok">Đồng ý</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>
    <string name="month">Tháng</string>
    <string name="week">Tuần</string>
    <string name="borrowing_title">Vay</string>
    <string name="lending_tilte">Cho vay</string>
    <string name="total_borrow_money">Tổng tiền vay:</string>
    <string name="total_lend_money">Tổng tiền cho vay:</string>
    <string name="total_revenue">Tổng lãi suất:</string>
    <string name="borrow_lend_name">Tên</string>
    <string name="borrow_lend_add_phone">Điện thoại</string>
    <string name="borrow_lend_add_address">Địa chỉ</string>
    <string name="borrow_lend_start_date">Ngày bắt đầu:</string>
    <string name="borrow_lend_end_date">Ngày đáo hạn:</string>
    <string name="borrow_lend_phone">Điện thoại:</string>
    <string name="borrow_lend_address">Địa chỉ:</string>
    <string name="borrow_lend_total_money">Tổng tiền:</string>
    <string name="borrow_lend_interest">Lãi suất:</string>
    <string name="borrow_lend_interest_type">Kiểu lãi:</string>
    <string name="borrow_lend_borrower">Người vay:</string>
    <string name="borrow_lend_lender">Người cho vay:</string>
    <string name="borrow_lend_current_interest">Lãi suất hiện tại:</string>
    <string name="borrow_lend_total_money_plus_current_interest">Tổng tiền (có lãi):</string>
    <string name="borrow_add_title">Thêm khoản vay</string>
    <string name="lend_add_title">Thêm khoản cho vay</string>
    <string name="borrow_edit_title">Sửa khoản vay</string>
    <string name="lend_edit_title">Sửa khoản cho vay</string>
    <string name="borrow_view_title">Xem khoản vay</string>
    <string name="lend_view_title">Xem khoản cho vay</string>
    <string name="simple_interest">Lãi đơn</string>
    <string name="compound_interest">Lãi kép</string>
    <string name="borrow_lend_no_interest">Chưa có</string>
    <string name="borrow_lend_warning_name_lender_total_money">Bạn phải nhập tên người cho vay và tổng số tiền</string>
    <string name="borrow_lend_warning_name_borrower_total_money">Bạn phải nhập tên người vay và tổng số tiền</string>
    <string name="borrow_lend_warning_name_lender">Bạn phải nhập tên người cho vay</string>
    <string name="borrow_lend_warning_name_borrower">Bạn phải nhập tên người vay</string>
    <string name="borrow_lend_warning_total_money">Bạn phải nhập tổng số tiền</string>
    <string name="borrow_lend_warning_total_money_0">Tổng tiền phải lớn hơn 0</string>
    <string name="borrow_lend_warning_interest_rate_expired_date">Hãy nhập ngày đáo hạn!</string>
    <string name="borrow_lend_warning_interest_rate_0">Lãi suất phải lớn hơn 0</string>
    <string name="borrow_lend_warning_interest_rate_100">Lãi suất phải lớn hơn 0 và nhỏ hơn 100</string>
    <string name="borrow_lend_expired_date_less_than_start_date">Ngày đáo hạn không hợp lệ</string>
    <string name="schedule_budget">Tổng</string>
    <string name="schedule_living_cost">Chi phí</string>
    <string name="schedule_budget_hint">Ngân sách</string>
    <string name="schedule_duration">Khoảng thời gian</string>
    <string name="schedule_exist_message">Đã có kế hoạch trong thời gian này!\r\nXin vui lòng chọn lại!</string>
    <string name="schedule_detail_budget_title">Tổng ngân sách:</string>
    <string name="schedule_title">Kế hoạch</string>
    <string name="schedule_please_input_total_budget">Hãy nhập tổng ngân sách</string>
    <string name="schedule_overbudget">Đã vượt ngân sách,\r\ntăng thêm ngân sách?</string>
    <string name="schedule_over_total_budget">Tổng ngân sách không đủ</string>
    <string name="schedule_empty_exists">Còn bản ghi đang trống</string>
    <string name="schedule_add_title">Kế hoạch mới</string>
    <string name="schedule_edit_title">Sửa kế hoạch</string>
    <string name="schedule_new_category">Mục mới</string>
    <string name="schedule_view_detail_title">Xem kế hoạch</string>
    <string name="schedule_detail_average_title">Trung bình/ Ngày:</string>
    <string name="schedule_menu_title">Danh mục</string>
    <string name="sync_view_title">Đồng bộ</string>
    <string name="sync_view_setting_title">Thiết lập đồng bộ</string>
    <string name="sync_view_auto_sync">Tự động đồng bộ</string>
    <string name="sync_view_auto_sync_description">Dữ liệu của ứng dụng sẽ được tự động đồng bộ</string>
    <string name="sync_view_account_management">Quản lý tài khoản</string>
    <string name="sync_view_account_active">Bật</string>
    <string name="sync_view_account_deactive">Tắt</string>
    <string name="sync_view_new_account">Tạo tài khoản</string>
    <string name="sync_success">Đồng bộ thành công</string>
    <string name="sync_fail">Đồng bộ thất bại</string>
    <string name="sync_waiting_synchronization">Đang đồng bộ…</string>
    <string name="sync_no_account_message">Bạn cần tài khoản để đồng bộ.\r\nThêm mới?</string>
    <string name="warning_title">Thiết lập cảnh báo chung</string>
    <string name="warning_schedule_title">Kế hoạch</string>
    <string name="warning_borrow_title">Vay và cho vay</string>
    <string name="warning_schedule_warn_before">Cảnh báo khi đến</string>
    <string name="warning_borrow_warn_before">Cảnh báo trước khi đáo hạn</string>
    <string name="warning_ring">Nhạc chuông</string>
    <string name="warning_week_borrow_overbudget">Đã vượt quá {0}% so với kế hoạch tuần!!!</string>
    <string name="warning_month_borrow_overbudget">Đã vượt quá {0}% so với kế hoạch tháng!!!</string>
    <string name="warning_remain">Nhắc lại</string>
    <string name="warning_expired_date">Đến ngày đáo hạn</string>
    <string-array name="warning_ring_array">
        <item>Không có</item>
        <item>Mặc định</item>
        <item>Thư mục</item>
    </string-array>
    <string-array name="warning_remain_array">
        <item>Không bao giờ</item>
        <item>10 phút</item>
        <item>30 phút</item>
        <item>1 tiếng</item>
        <item>Khác…</item>
    </string-array>
    <string-array name="warning_schedule_warn_array">
        <item>25 %</item>
        <item>50 %</item>
        <item>70 %</item>
        <item>100 %</item>
        <item>Khác…</item>
    </string-array>
    <string-array name="warning_borrow_warn_array">
        <item>1 tiếng</item>
        <item>10 tiếng</item>
        <item>1 ngày</item>
        <item>1 tuần</item>
        <item>Khác…</item>
    </string-array>
    <string name="entry_management_title">Quản lý chi tiêu</string>
    <string name="entry_expense_title">Chi phí</string>
    <string name="entry_income_title">Thu nhập</string>
    <string name="entry_new_expense_title">Thêm chi phí</string>
    <string name="entry_new_income_title">Thêm thu nhập</string>
    <string name="entry_price_hint">Giá</string>
    <string name="entry_detect_record">Phát hiện {0} bản ghi</string>
    <string name="entry_unformated_data">Định dạng sai</string>
    <string name="entry_view_week_item_title">Week</string>
    <string name="entry_product_name_hint">Tên sản phẩm</string>
    <string name="entry_daily_total_expense_title">Tổng chi phí ngày:</string>
    <string name="entry_daily_total_income_title">Tổng thu nhập ngày:</string>
    <string name="entry_total_budget_week">Ngân sách tuần còn lại:</string>
    <string name="entry_total_budget_month">Ngân sách tháng còn lại:</string>
    <string name="entry_daily_expense_title">Xem chi phí</string>
    <string name="entry_daily_income_title">Xem thu nhập</string>
    <string name="entry_daily_not_for_furture">Giới hạn đến thời gian hiện tại</string>
    <string name="entry_edit_expense_title">Sửa chi phí</string>
    <string name="entry_edit_income_title">Sửa thu nhập</string>
    <string name="entry_edit_price_empty">Nhập giá tiền</string>
    <string name="entry_edit_category_empty">Nhập tên sản phẩm</string>
    <string name="entry_edit_nfc_message">Quẹt thẻ NFC qua thiết bị…</string>
    <string name="entry_edit_menu_title">Menu</string>
    <string name="entry_edit_qr_code">QR Code</string>
    <string name="entry_edit_nfc">NFC</string>
    <string name="import_wrong_format">Lỗi định dạng.\r\nKhông thể nhập…</string>
    <string name="report_management_title">Báo cáo</string>
    <string name="report_management_detail_budget">Budget</string>
    <string name="report_management_detail_income">Income</string>
    <string name="report_management_detail_expense">Expense</string>
    <string name="report_management_detail_borrowing">Borrowing</string>
    <string name="report_management_detail_lending">Lending</string>
    <string name="report_management_custom_dialog_check_all">Chọn tất cả</string>
    <string name="report_management_custom_dialog_uncheck_all">Bỏ chọn tất cả</string>
    <string name="report_in_month">Thống kê trong tháng</string>
    <string name="report_in_week">Thống kê trong tuần</string>
    <string name="report_between_month">Thống kê giữa các tháng</string>
</resources>