<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="25dp"
        android:background="@drawable/title_background" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:text="@string/sync_view_title"
            android:textColor="@color/white_text_color"
            android:textSize="18dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:layout_marginLeft="3dp"
        android:background="@color/white_text_color_transparent"
        android:gravity="left|center_vertical"
        android:text="@string/sync_view_setting_title"
        android:textColor="@color/white_text_color"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/sync_view_auto_sync"
                android:textColor="@color/white_text_color"
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|center_vertical"
                android:layout_marginLeft="15dp"
                android:text="@string/sync_view_auto_sync_description"
                android:textColor="@color/white_text_color"
                android:textSize="15dp" />
        </LinearLayout>

        <CheckBox
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_weight="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white_text_color_transparent" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_gravity="left|center_vertical"
            android:text="@string/sync_view_account_management"
            android:textColor="@color/white_text_color"
            android:textSize="16dp" />

        <Button
            android:id="@+id/sync_new_button"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/add_new_icon"
            android:onClick="add_new_button" />
    </LinearLayout>

    <ListView
        android:id="@+id/sync_view_account_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>