<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:id="@+id/entry_detail_expanded_status"
            android:contentDescription="@string/image_icon_description"
            android:src="@drawable/combobox_icon" />

        <TextView
            android:id="@+id/entry_detail_category_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/entry_detail_expanded_status"
            android:text="@string/dummy_data"
            android:textColor="@color/white_text_color" />

        <TextView
            android:id="@+id/entry_detail_category_item_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_toRightOf="@+id/entry_detail_category_item_name"
            android:text="@string/time_token"
            android:textColor="@color/white_text_color" />

        <TextView
            android:id="@+id/entry_detail_category_item_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="18sp"
            android:layout_gravity="center_vertical|right"
            android:text="@string/dummy_data"
            android:textColor="@color/white_text_color" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/brown_line" />

    <LinearLayout
        android:id="@+id/entry_detail_category_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25sp"
        android:orientation="vertical"
        android:visibility="gone" />

</LinearLayout>