<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_background_2" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/schedule_view_detail_title"
            android:textColor="@color/white08"
            android:textSize="26sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/main_content_background"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/schedule_detail_main_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25sp"
            android:layout_marginLeft="35sp"
            android:layout_marginRight="35sp"
            android:background="@drawable/spinner_bottom"
            android:gravity="center_horizontal"
            android:text="@string/dummy_data"
            android:textColor="@color/white_text_color"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/schedule_detail_budget_title"
                android:textColor="@color/white_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/schedule_detail_budget_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/dummy_data"
                android:textColor="@color/white_text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="10sp"
            android:focusable="false"
            android:paddingRight="5dp" >

            <LinearLayout
                android:id="@+id/schedule_detail_item_list"
                android:layout_width="fill_parent"
                android:layout_marginRight="15sp"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25sp"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:text="@string/schedule_detail_average_title"
                android:textColor="@color/white_text_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/schedule_avg_budget_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="25sp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/dummy_data"
                android:textColor="@color/white_text_color"
                android:textSize="18sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/editBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_icon"
                android:onClick="editBtnClicked" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>